# vap-ui

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
deploy/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
scripts/: build_image.sh  login.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/agent/[...path]/: route.ts
src/app/api/gene-info/[symbol]/: route.ts
src/app/api/mcp/[...path]/: route.ts
src/app/api/samples/[...path]/: route.ts
src/app/api/samples/[[...path]]/: route.ts
src/app/api/stats/[...path]/: route.ts
src/app/dashboard/: page.tsx
src/app/genes/[symbol]/: page.tsx
src/app/individuals/[id]/: page.tsx
src/app/pipelines/: page.tsx
src/app/pipelines/[id]/: PipelineDetail.tsx  page.tsx
src/app/query/: page.tsx
src/app/samples/: page.tsx
src/components/: AgentPanel.tsx  ConversationThread.tsx  HealthBanner.tsx  IndividualAgentPanel.tsx  IndividualIdCell.tsx  Modal.tsx  Nav.tsx  PipelineDetailModal.tsx  QueryInput.tsx  QueryResult.tsx  StatusBadge.tsx  SubmitPipelineModal.tsx  ToolCallStep.tsx  VarisCell.tsx  VarisPopover.tsx  ZygosityBadge.tsx
src/hooks/: useAgentQuery.ts  useClinvarVersion.ts  useDashboard.ts  useGeneVariants.ts  useHealth.ts  useIndividualSummary.ts  useIndividualVariants.ts  usePipeline.ts  usePipelines.ts  useSample.ts  useSamples.ts  useStreamTimer.ts
src/lib/: agent-client.ts  cohort-client.ts  sample-client.ts  utils.ts  variantNotes.ts  workflow-client.ts
src/types/: api.ts
(+1 files in other folders)
